cluster/apps/backup/resilio-sync/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/probe: "true"
    prometheus.io/protocol: tcp
  labels:
    app.kubernetes.io/instance: resilio-sync
    app.kubernetes.io/name: resilio-sync
  name: resilio-sync
  namespace: backup
spec:
  ports:
    - name: http-user1
      port: 8888
      protocol: TCP
      targetPort: 8888
    - name: http-user2
      port: 8889
      protocol: TCP
      targetPort: 8889
    - name: com-user1
      port: 55555
      protocol: TCP
      targetPort: 55555
    - name: com-user2
      port: 55556
      protocol: TCP
      targetPort: 55556
  selector:
    app.kubernetes.io/instance: resilio-sync
    app.kubernetes.io/name: resilio-sync
  type: ClusterIP
