cluster/apps/backup/resilio-sync/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_ID_1}.cfargotunnel.com"
  labels:
    app.kubernetes.io/instance: resilio-sync
    app.kubernetes.io/name: resilio-sync
  name: resilio-sync
  namespace: backup
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "sync1.${SECRET_DOMAIN}"
        - "sync2.${SECRET_DOMAIN}"
  rules:
    - host: "sync1.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resilio-sync
                port:
                  number: 8888
    - host: "sync2.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resilio-sync
                port:
                  number: 8889
